--- a/views/include/_all-contacts.ejs
+++ b/views/include/_all-contacts.ejs
@@ -115,7 +115,7 @@
                 <td class="hover px-6 py-4 whitespace-nowrap">
                     <!-- Add icons with links to your delete, view, and update routes -->
                     <!-- <a href=""><i class="fas fa-edit text-green-500 cursor-pointer"></i></a> -->
-                    <a href="#" onclick="deleteMessages('<%= contact._id %>')"><i class="fas fa-trash-alt text-red-500 cursor-pointer"></i></a>
+                    <a href="#" onclick="deleteMessage('<%= contact._id %>')"><i class="fas fa-trash-alt text-red-500 cursor-pointer"></i></a>
                     <a href="/view-message/<%= contact._id %>"><i class="fas fa-eye text-blue-500 cursor-pointer mx-2"></i></a>
                 </td>
                  
@@ -137,10 +137,10 @@
     </div>
 </body>
 <script>
-    function deleteMessages(username) {
+    function deleteMessage(username) {
         if (confirm('Are you sure you want to delete this Contacts?')) {
             // Redirect to the delete route with the storage ID
-            window.location.href = "/delete-messag/" + username + "?_method=DELETE";
+            window.location.href = "/delete-message/" + username + "?_method=DELETE";
         }
     }
    </script>
