--- a/views/success/contacts.ejs
+++ b/views/success/contacts.ejs
@@ -78,10 +78,10 @@ a:hover::after {
     <div class="container">
         <div class="success-message">
             <h1>Message sent successfully!</h1>
-            <p>We will get back to you as soon as possible. Your message has been received</p>
+            <p>We will get back to you as soon as possible. Your message has been received...</p>
         </div>        
         <div class="add-another-reception">
-            <a href="#" onclick="goBack()">Go Back</a>
+            <a href="" onclick="goBack()">Go Back</a>
         </div>
     </div>
 </body>
