--- a/views/404-sudo.ejs
+++ b/views/404-sudo.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>404 Forbidden</title>
+    <title>Super admin only</title>
       <!-- 
     - favicon
   -->
@@ -187,6 +187,29 @@
 
         <div class="header-bottom-actions">
 
+          <!-- <button class="header-bottom-actions-btn" aria-label="Search">
+            <ion-icon name="search-outline"></ion-icon>
+
+            <span>Search</span>
+          </button> -->
+
+          <!-- <a href="/login" class="header-bottom-actions-btn" aria-label="Profile">
+            <ion-icon name="person-outline"></ion-icon>
+            <span>Profile</span>
+          </a> -->
+
+          <!-- <button class="header-bottom-actions-btn" aria-label="Cart">
+            <ion-icon name="cart-outline"></ion-icon>
+
+            <span>Cart</span>
+          </button> -->
+
+          <!-- <button class="header-bottom-actions-btn" data-nav-open-btn aria-label="Open Menu">
+            <ion-icon name="menu-outline"></ion-icon>
+
+            <span>Menu</span>
+          </button> -->
+
         </div>
 
       </div>
@@ -194,8 +217,12 @@
 
   </header>
     <div class="icon">🏠</div>
-    <h1>Oops! This page doesn't exist.</h1>
-    <p>Maybe it's hiding in the attic. <a href="/login">Go back home</a>.</p>
-    
+    <h1>Forbidden, you do not have the required permission to access this route.</h1>
+    <p>Contact Super Administrator. <a href="/login">Go back home</a>.</p>
 </body>
+<!-- <script>
+    function goBack() {
+        window.history.back();
+    }
+</script> -->
 </html>
