--- a/views/include/_all-contacts.ejs
+++ b/views/include/_all-contacts.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>All Application</title>
+    <title>All Messages</title>
   <link rel="stylesheet" href="./css/users.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml">
