--- a/views/include/_header-admin.ejs
+++ b/views/include/_header-admin.ejs
@@ -151,7 +151,7 @@
               </li> -->
 
               <li>
-                <a href="/contact" class="navbar-link" data-nav-link>Contact</a>
+                <a href="/admin-contact" class="navbar-link" data-nav-link>Contact</a>
               </li>
 
             </ul>
