--- a/views/success/contacts.ejs
+++ b/views/success/contacts.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="./css/success.css">
     <title>Contact Success</title>
-
+    <link rel="shortcut icon" href="./favicon.svg" type="image/svg+xml">
     <style>
         body {
     margin: 0;
@@ -81,7 +81,7 @@ a:hover::after {
             <p>We will get back to you as soon as possible. Your message has been received...</p>
         </div>        
         <div class="add-another-reception">
-            <a href="" onclick="goBack()">Go Back</a>
+            <!-- <a href="" onclick="goBack()">Go Back</a> -->
         </div>
     </div>
 </body>
