--- a/views/include/_footer.ejs
+++ b/views/include/_footer.ejs
@@ -109,6 +109,10 @@
               <a href="#" class="footer-link">Contact us</a>
             </li>
 
+            <li>
+              <a href="/update-password/<%= user._id %>" class="footer-link">My account</a>
+            </li>
+
           </ul>
 
           <ul class="footer-list">
@@ -122,19 +126,15 @@
             </li> -->
 
             <li>
-              <a href="/update-password/<%= user._id %>" class="footer-link">My account</a>
-            </li>
-
-            <li>
-              <a href="/services-fee-agreement" class="footer-link">Service Fee Agreement</a>
-            </li>
-
-            <li>
               <a href="/registration-process-statement" class="footer-link">Registration Process Statement</a>
             </li>
 
             <li>
               <a href="/terms-and-conditions" class="footer-link">Terms & Conditions</a>
+            </li>
+
+            <li>
+              <a href="/services-fee-agreement" class="footer-link">Service Fee Agreement</a>
             </li>
 
             <li>
@@ -150,7 +150,7 @@
             </li>
 
             <li>
-              <a href="#" class="footer-link">Login</a>
+              <a href="/login" class="footer-link">Login</a>
             </li>
 
             <li>
